GNOME Font Viewer - 47.0
-------------------------------------------------------------------------------
Fonts 47.0 comes with the following improvements:
 * Set application name and icon (Balló György)
 * Remove unused dependency on gnome-desktop (Balló György)

This version brings translation updates for the following locales:
 * Slovak (Jose Riha)
 * Turkish (Sabri Ünal)

GNOME Font Viewer - 47.alpha
-------------------------------------------------------------------------------
Fonts 47.alpha comes with the following improvements:
 * Add slant preview (Jeremias Ortega)
 * Fix install button mnemonic (Automeris naranja)
 * Fix the "Install" button stuck in "Installing" when font install is successful (Houssam Elbadissi)
 * Use adaptive dialogs (Automeris naranja, Christopher Davis)

This version brings translation updates for the following locales:
 * Hindi (Guntupalli Karunakar, Scrambled 777)
 * Kabyle (Rachida SACI)

GNOME Font Viewer - 46.0
-------------------------------------------------------------------------------
Fonts 46.0 comes with the following improvements:
* Fix incorrect/missing URLs (Vaishnavi Nawghare)
* Improve app metainfo (Sabri Ünal)

This version brings translation updates for the following locales:
 * Esperanto (Kristjan SCHMIDT)
 * Georgian (Ekaterine Papava)
 * Greek, Modern (1453-) (Efstathios Iosifidis)
 * Hebrew (Yaron Shahrabani)
 * Latvian (Rūdolfs Mazurs)
 * Panjabi (A S Alam)
 * Romanian (Florentina Mușat)


GNOME Font Viewer - 45.0
-------------------------------------------------------------------------------
Fonts 45.0 comes with a new look courtesy of the new libadwaita 1.4 widgets.

This version brings translation updates for the following locales:
 * Belarusian (Vasil Pupkin)
 * Chinese (China) (Boyuan Yang)
 * Dutch (Nathan Follens)
 * English (United Kingdom) (Bruce Cowan)
 * Greek, Modern (1453*) (Efstathios Iosifidis)
 * Icelandic (Sveinn í Felli)
 * Italian (Gianvito Cavasoli)
 * Kazakh (Baurzhan Muftakhidinov)