@@ -47,6 +47,14 @@
   </kudos>
   <content_rating type="oars-1.1" />
   <releases>
+    <release version="48.alpha" date="2024-11-12">
+      <description>
+        <p>This version brings translation updates for the following locales:</p>
+        <ul>
+          <li>Belarusian (Vasil Pupkin)</li>
+        </ul>
+      </description>
+    </release>
     <release version="47.0" date="2024-09-16">
       <description>
         <p>Fonts 47.0 comes with the following improvements:</p>
