@@ -1,3 +1,10 @@
+GNOME Font Viewer - 48.alpha
+-------------------------------------------------------------------------------
+ * Automate publishing of the Release Tarballs
+
+This version brings translation updates for the following locales:
+ * Belarusian (Vasil Pupkin)
+
 GNOME Font Viewer - 47.0
 -------------------------------------------------------------------------------
 Fonts 47.0 comes with the following improvements:
